# EVM_TestTask

./: CMakeLists.txt  README.md  STM32F405VGTX_FLASH.ld
Core/Inc/: adcDataProcessing.h  canDataProcessing.h  globals.h  stm32f4xx_it.h
Core/Src/: adcDataProcessing.c  canDataProcessing.c  empty_init.c  globals.c  main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
cmake/: gcc-arm-none-eabi.cmake.txt
